--- a/BackupBuddyV.2
+++ b/BackupBuddyV.2
@@ -142,29 +142,57 @@ def list_remotes():
 
 def select_remote():
     """Select a remote from the list or configure a new one."""
-    remotes = list_remotes()
-    print("\nAvailable remotes:")
-    for i, remote in enumerate(remotes, start=1):
-        print(f"{i}. {remote}")
-    print("0. Configure a new remote")
+    try:
+        # Försök lista konfigurerade remotes
+        result = subprocess.run(["rclone", "listremotes"], capture_output=True, text=True, check=True)
+        remotes = result.stdout.strip().splitlines()
+    except subprocess.CalledProcessError:
+        remotes = []
 
-    while True:
-        try:
-            choice = input("Enter the number of the remote to use (or 'b' to go back): ").strip()
-            if choice.lower() == "b":
-                return "b"
-            choice = int(choice)
-            if choice == 0:
-                print("\nStarting rclone configuration...")
-                subprocess.run("rclone config", shell=True)
-                remotes = list_remotes()
-            elif 1 <= choice <= len(remotes):
-                return remotes[choice - 1]
+    if not remotes:
+        print("No remotes found. Please configure a remote first.")
+        print("\nNo remotes found, make a new one?")
+        print("n) New remote")
+        print("s) Set configuration password")
+        print("q) Quit config")
+
+        while True:
+            choice = input("Enter your choice (n/s/q): ").strip().lower()
+            if choice == "n":
+                print("\nStarting rclone configuration to create a new remote...")
+                subprocess.run(["rclone", "config"], check=True)
+                return select_remote()  # Rekursiv anrop efter ny remote är skapad
+            elif choice == "s":
+                print("\nSet a configuration password for rclone...")
+                subprocess.run(["rclone", "config", "password"], check=True)
+            elif choice == "q":
+                print("Operation canceled.")
+                return None
             else:
                 print("Invalid choice. Try again.")
-        except ValueError:
-            print("Invalid input. Enter a number.")
+    else:
+        # Lista befintliga remotes
+        print("\nAvailable remotes:")
+        for i, remote in enumerate(remotes, start=1):
+            print(f"{i}. {remote}")
+        print("0. Configure a new remote")
 
+        while True:
+            choice = input("Enter the number of the remote to use (or 'b' to go back): ").strip()
+            if choice.lower() == "b":
+                return None
+            try:
+                choice = int(choice)
+                if choice == 0:
+                    print("\nStarting rclone configuration to create a new remote...")
+                    subprocess.run(["rclone", "config"], check=True)
+                    return select_remote()  # Rekursiv anrop efter ny remote är skapad
+                elif 1 <= choice <= len(remotes):
+                    return remotes[choice - 1]
+                else:
+                    print("Invalid choice. Try again.")
+            except ValueError:
+                print("Invalid input. Please enter a number.")
 
 
 def generate_backup_script(config, job_id):
@@ -460,17 +488,56 @@ def create_transfer(config):
     """Guide user through creating a new transfer job."""
     print("\nCreating a new transfer job.")
     job_id = input("Enter a unique ID for the transfer job: ").strip()
-    source = input("Enter the source path (local or remote): ").strip()
-    remote = select_remote()
-    destination = input("Enter the destination path on the remote (e.g., transfers/): ").strip()
 
+    # Välj source (lokal eller remote)
+    print("\nSelect the source:")
+    print("1. Local directory")
+    print("2. Remote")
+    source_type = input("Enter your choice (1/2): ").strip()
+
+    if source_type == "1":
+        print("\nNavigate to select the source directory (local).")
+        source = navigate_local_directories()
+    elif source_type == "2":
+        print("\nSelect the source remote:")
+        source_remote = select_remote()
+        if source_remote.lower() == "b":
+            print("Operation canceled.")
+            return
+        source = navigate_remote_directories(source_remote)
+    else:
+        print("Invalid choice. Returning to main menu.")
+        return
+
+    # Välj destination (lokal eller remote)
+    print("\nSelect the destination:")
+    print("1. Local directory")
+    print("2. Remote")
+    destination_type = input("Enter your choice (1/2): ").strip()
+
+    if destination_type == "1":
+        print("\nNavigate to select the destination directory (local).")
+        destination = navigate_local_directories()
+    elif destination_type == "2":
+        print("\nSelect the destination remote:")
+        destination_remote = select_remote()
+        if destination_remote.lower() == "b":
+            print("Operation canceled.")
+            return
+        destination = navigate_remote_directories(destination_remote)
+    else:
+        print("Invalid choice. Returning to main menu.")
+        return
+
+    # Spara konfigurationen
     config[job_id] = {
         "source": source,
-        "destination": f"{remote}{destination}",
+        "destination": destination,
         "type": "transfer",  # Mark this as a transfer job
     }
     save_config(config)
 
+    # Generera och kör överföringsskript
     script_path = generate_transfer_script(config, job_id)
     print(f"Transfer script generated: {script_path}")
 
